# hash

./: README.md
cplus/crc/: crc.cpp  crc.h  crctest.cpp
rust/crc/: .gitignore  CRC_BENCHMARKS.md  CRC_README.md  Cargo.toml  README.md
rust/crc/.cargo/: config.toml
rust/crc/examples/: concat_crossover.rs  crc_example.rs
rust/crc/src/: crc.rs
