[package]
name = "crc64-nvme"
version = "0.1.0"
edition = "2021"
authors = ["Bob Jenkins"]
license = "MIT OR Apache-2.0"
description = "High-performance CRC-64-NVME implementation with SIMD acceleration"
readme = "CRC_README.md"

[lib]
name = "crc64_nvme"
path = "src/crc.rs"

[[example]]
name = "crc_example"
path = "examples/crc_example.rs"

[[example]]
name = "concat_crossover"
path = "examples/concat_crossover.rs"

[dependencies]
# No external dependencies - only uses std::arch::x86_64 intrinsics

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
